# mao-map

./: .gitignore  README.md  README_EN.md  package-lock.json  package.json  tauri.html  version.json  vite.config.js
.github/workflows/: build.yml  issue-guard.yml
assets/css/: style.css
assets/js/: app.js
data/: mao_trajectory_events.json
i18n/: en.json  zh-CN.json
scripts/: build.js
src/: tauri-titlebar.js  tauri.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs
